--- a/src/app/admin/layout/component/change-password/change-password.component.html
+++ b/src/app/admin/layout/component/change-password/change-password.component.html
@@ -1,17 +1,31 @@
 <form [formGroup]="form" (submit)="changePassword($event)">
     <div class="popup_formWrapper">
         <h3>Change Password</h3>
-        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+        <mat-form-field appearance="outline" class="w-100 mb-10">
             <mat-label>Old Password</mat-label>
-            <input matInput type="password" formControlName="oldPassword">
+            <input matInput [type]="oldhide ? 'password' : 'text'" formControlName="oldPassword">
+            <button mat-icon-button matSuffix type="button" (click)="oldhide = !oldhide">
+                <mat-icon>{{oldhide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+        <mat-form-field appearance="outline" class="w-100 mb-10">
             <mat-label>New Password</mat-label>
-            <input matInput type="password" formControlName="password">
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
+            <mat-error *ngIf="form.get('password').hasError('required')">Password is required</mat-error>
+            <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="!form.get('password').hasError('required') && form.get('password').hasError('password')">
+                Format doesn't match!. 
+                <span matTooltip="Minimum 8 characters required. &#13; Should include one Uppercase and one lowercase letters." matTooltipClass="goresto_tooltip"><mat-icon>info</mat-icon></span>
+            </mat-error>
         </mat-form-field>
-        <mat-form-field appearance="outline" class="w-100 pb-0 mb-10">
+        <mat-form-field appearance="outline" class="w-100 mb-10">
             <mat-label>Confirm Password</mat-label>
             <input matInput type="password" formControlName="confirmPassword">
+            <mat-error *ngIf="form.get('confirmPassword').hasError('required')">Confirm password is required</mat-error>
+            <mat-error *ngIf="!form.get('confirmPassword').hasError('required') && form.get('confirmPassword').hasError('compare')">
+                Password dosen't match.</mat-error>
         </mat-form-field>
     </div>
     <div class="popup_Btnfooter text-center">
