--- a/src/app/guest/signin/signin.component.html
+++ b/src/app/guest/signin/signin.component.html
@@ -9,11 +9,14 @@
                 
                 <mat-form-field appearance="outline" class="w-100 mt-2">
                     <mat-label>User Name</mat-label>
-                    <input matInput formControlName="username" placeholder="">
+                    <input matInput formControlName="username" placeholder="" name="loginname" id="loginName">
                 </mat-form-field>
                 <mat-form-field appearance="outline" class="w-100 mt-2">
                     <mat-label>Password</mat-label>
-                    <input matInput formControlName="password" type="password" placeholder="">
+                    <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" placeholder="" name="loginpassword" id="loginPassword">
+                    <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
+                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
             </mat-card-content>
 
