--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -1,69 +1,25 @@
-<div class="page_header d-flex mb-4">
-    <h2 class="header_title">Products</h2>
-    <div class="ml-auto">
-        <button mat-raised-button color="primary" routerLink="/admin/products/update">Add New</button>
-    </div>
+<div class="accont_header_wrapping pa-25">
+    <h2 class="text-uppercase font-weight-500 mb-0 d-flex align-items-center justify-content-between">
+        Product
+        <!-- <div>
+            <button mat-raised-button color="primary" routerLink="/admin/settings/company/update">Add New</button>
+        </div> -->
+    </h2>
 </div>
-
-<div class="search_outerWrapper">
-    <form>
-        <mat-form-field  appearance="outline" class="ew-250 pb-0">
-            <mat-label>Search</mat-label>
-            <input [formControl]="filterForm.get('searchString')" type="text" matInput>
-            <mat-icon matSuffix>search</mat-icon>
-        </mat-form-field>
-    </form>
-</div>
-
-<div class="table_outerWrapper mat-elevation-z2 mt-20">
-    <table mat-table [dataSource]="dataSource?.data" matSort class="w-100">
-        <!-- Position Column -->
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
-            <td mat-cell *matCellDef="let element"> 
-                <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                    <mat-icon>more_vert</mat-icon>
-                </button>
-                    <mat-menu #moreOption="matMenu">
-                    <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item type="button" (click)="deleteProduct(element)"><mat-icon>delete</mat-icon> Delete</button>
-                </mat-menu>
-            </td>
-        </ng-container>
-
-        <ng-container matColumnDef="productNumber">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Product No </th>
-            <td mat-cell *matCellDef="let element"> {{element.productNumber}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="productName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-200"> Product Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="description">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="branch">
-            <th mat-header-cell *matHeaderCellDef> Branch </th>
-            <td mat-cell *matCellDef="let element"> {{ element.branch?.branchTitle }} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="isActive">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-150"> is Active? </th>
-            <td mat-cell *matCellDef="let element">
-                <mat-slide-toggle  (change)="changeStatus(element)" [(ngModel)]="element.isActive"></mat-slide-toggle>
-            </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+<div class="account_body_wrapper pl-25 pr-25">
+    <div class="body_inner_card">
+        <div class="tab_header">
+            <div class="tab_btn" routerLink="/admin/products/list" routerLinkActive="active">
+                <a href="javascript:;">Products Lists</a>
+            </div>
+            <div class="tab_btn" routerLink="/admin/products/update" routerLinkActive="active pointer-none">
+                <a href="javascript:;">{{editId?'Update Product': 'Add Product'}} </a>
+            </div>
+        </div>
+        <div class="tab_body pa-20">
+            <router-outlet></router-outlet>
+        </div>
         
-        <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="3">No data to display</td>
-        </tr>
-    </table>
-    <mat-paginator  [pageSizeOptions]="[10]" [length]="dataSource?.total" [pageSize]="10" (page)="getAllProducts($event.pageIndex+1)"></mat-paginator>
+    </div>
+
 </div>
