--- a/src/styles.scss
+++ b/src/styles.scss
@@ -813,3 +813,33 @@ label.mat-checkbox-layout {
     line-height: 1.4;
     white-space: pre-line;
 }
+
+.tag{
+    display: inline-block;
+    border-radius: 5px;
+    padding: 3px 10px;
+    line-height: 1.2;
+    font-weight: 500;
+    font-size: 1.2rem;
+    margin-right: 5px;
+    &.sales{
+        color: #2e358e;
+        background-color: rgba(54, 0, 241, 0.349);
+        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+    }
+    &.purchase{
+        color: #8e2e2e;
+        background-color: rgba(241, 0, 0, 0.349);
+        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+    }
+    &.payment{
+        color: #368e2e;
+        background-color: rgba(0, 241, 20, 0.349);
+        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+    }
+    &.recipt{
+        color: #2e8b8e;
+        background-color: rgba(0, 241, 229, 0.349);
+        box-shadow: 0px 2px 5px -1px rgba(177, 158, 242,0.53%);
+    }
+}
